# intento

./: .dockerignore  .gitignore  .gitmodules  .gitpod.yml  Dockerfile  LICENCE  Makefile  README.md  SomeFile.txt  attestation_cert.der  config.yml  contract.wasm  daemon.sh  go.mod  go.sum  go_test.sum  init.sh  init2.sh  init_fresh.sh  initmain.sh  inittest.sh  installsgx.sh  intentod  io-master-cert.der  json.json  netlify.toml  node-master-cert.der  package-lock.json  readme.md  redo.sh  reinstall.txt  reinstall_tpp.sh  reinstall_trst.sh  reserves.json  rest.sh  restart.sh  setup.sh  sgx_linux_x64_driver_2.11.0_2d2b795.bin.3  start.sh  start.txt  (+5 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-and-release.yml  build.yml  ci.yml  docker-push.yml  docker.yml  e2e-tests.yml  pi.yml  proto.yml  release.yml  test.yml
.pi/: Dockerfile  build.sh
.sgx_secrets/: attestation_cert.der  consensus_seed.sealed  new_node_seed_exchange_keypair.sealed
app/: ante.go  ante_test.go  app.go  config.go  encoding.go  export.go  genesis.go  prefix.go  test_setup.go  tx_cli.go  upgrades.go  upgrades_test.go  validator_admin.go
app/apptesting/: ibctesting.go  test_helpers.go
app/keepers/: keepers.go
app/params/: coin.go  config.go  encoding.go
app/upgrades/: upgrades.go
client/docs/: config.json  swagger_legacy.yaml
cmd/: main.go
cmd/intentod/: main.go
cmd/tppd/: attestation.go  config.go  genaccounts.go  ias_bin_dev.go  main.go  root.go
cmd/trstd/: airdrop.go  attestation.go  config.go  genaccounts.go  genesis.go  genwasm.go  main.go  root.go  testnet.go
cosmwasm/: .dockerignore  CHANGELOG.md  Cargo.toml  MIGRATING.md  README.md
cosmwasm-old/testing/: callback-test.sh  cosmwasm-js-test.js  sanity-test.sh
cosmwasm/contracts/: README.md
cosmwasm/enclaves/: Cargo.toml  Xargo.toml
cosmwasm/enclaves/execute/: Cargo.toml  Enclave.config.xml  Enclave.edl  Makefile
cosmwasm/enclaves/execute/proto/item/: item.rs  mod.rs
cosmwasm/enclaves/execute/src/: lib.rs  tests.rs
cosmwasm/enclaves/execute/src/registration/: attestation.rs  cert.rs  offchain.rs  report.rs  seed_exchange.rs
cosmwasm/enclaves/ffi-types/: cbindgen.toml
cosmwasm/enclaves/ffi-types/src/: lib.rs  types.rs
cosmwasm/enclaves/query/: Cargo.toml  Enclave.config.prod.xml  Enclave.config.xml  Enclave.edl  Makefile
cosmwasm/enclaves/query/src/: lib.rs
cosmwasm/enclaves/shared/contract-engine/: Cargo.toml
cosmwasm/enclaves/shared/contract-engine/src/: const_callback_sig_addresses.rs  contract_operations.rs  contract_validation.rs  cosmwasm_config.rs  db.rs  errors.rs  gas.rs  io.rs  io_copy.rs  lib.rs  parse_msg.rs  query_chain.rs  types.rs
cosmwasm/enclaves/shared/contract-engine/src/wasm/: contract.rs  engine.rs  externals.rs  import_resolver.rs  traits.rs
cosmwasm/enclaves/shared/contract-engine/src/wasm3/: gas.rs  mod.rs  module_cache.rs  validation.rs
cosmwasm/enclaves/shared/cosmos-proto/: Cargo.toml  build.rs
cosmwasm/enclaves/shared/cosmos-proto/src/: lib.rs
cosmwasm/enclaves/shared/cosmos-proto/src/cosmwasm/: msg.rs  proposal.rs
cosmwasm/enclaves/shared/cosmos-proto/src/gov/: gov.rs  tx.rs
cosmwasm/enclaves/shared/cosmos-proto/src/item/: estimator.rs  item.rs
cosmwasm/enclaves/shared/cosmos-types/: Cargo.toml
cosmwasm/enclaves/shared/cosmos-types/src/: multisig.rs  single_address.rs  traits.rs  types.rs
cosmwasm/enclaves/shared/cosmwasm-types/: Cargo.toml
cosmwasm/enclaves/shared/cosmwasm-types/src/: addresses.rs  coins.rs  consts.rs  encoding.rs  full_env.rs  ibc.rs  lib.rs  query.rs  system_error.rs  types.rs
cosmwasm/enclaves/shared/cosmwasm-types/src/math/: decimal.rs  mod.rs
cosmwasm/enclaves/shared/cosmwasm-types/src/query/: bank.rs  ibc.rs  mod.rs  wasm.rs
cosmwasm/enclaves/shared/cosmwasm-types/src/results/: cosmos_msg.rs  empty.rs  events.rs  mod.rs  response.rs  submessages.rs
cosmwasm/enclaves/shared/crypto/: Cargo.toml
cosmwasm/enclaves/shared/crypto/src/: aes_siv.rs  consts.rs  ed25519.rs  key_manager.rs  lib.rs  secp256k1.rs  storage.rs  traits.rs
cosmwasm/enclaves/shared/utils/: Cargo.toml  Makefile
cosmwasm/enclaves/shared/utils/src/: kv_cache.rs  lib.rs  pointers.rs  recursion_depth.rs
cosmwasm/enclaves/xargo/sgx_tstd/: Cargo.toml
cosmwasm/testing/: callback-test.js  callback-test.sh  cosmwasm-js-test.js  sanity-test.sh
deployment/ci/: bootstrap_init.sh  docker-compose.ci.yaml  go_tests.sh  node_init.sh  wasmi-sgx-test.sh
deployment/deb/: control  postinst  postrm
deployment/docker/: MakefileCopy  docker-compose-local.yaml  docker-compose-mainnet.yaml  docker-compose_sw.yaml  sanity-test.sh  startup.sh
deployment/dockerfiles/: Dockerfile-sgx-18.04-unsafe  aesm.Dockerfile  app.Dockerfile  base-go.Dockerfile  base-rocksdb.Dockerfile  base-rust.Dockerfile  base.Dockerfile  build-deb-mainnet.Dockerfile  build-deb.Dockerfile  custom-node.Dockerfile  db-compile.Dockerfile  dev-image.Dockerfile  e2e.Dockerfile  enclave-test.Dockerfile  go-tests.Dockerfile  local-node.Dockerfile  mainnet-upgrade-release.Dockerfile  no-sgx.Dockerfile  release.Dockerfile  (+1 more)
dockernet/: README.md  build.sh  config.sh  docker-compose.yml  pkill.sh  start_network.sh
docs/: README.md  docs.go  docusaurus.config.js  package-lock.json  package.json  sidebars.js
e2e/: go.mod  ibc_hooks_test.go  learn_ibc_test.go  register_ica_submit_flow_and_trigger_ica_msg.go
go-cosmwasm/: .gitignore  Cargo.toml  Makefile  build.rs  lib.go
go-cosmwasm-old/: Makefile
independent_price_contract/: Cargo.toml
proto/: buf.yaml
scripts/: mockgen.sh  prop.json  protoc-swagger-gen.sh  protoc-swagger-openapi-gen.sh  protocgen.sh  public-node-updater.sh  sgx.sh  start-node.sh
testutil/: test_helpers.go
trstd copy/: airdrop.go  config.go  genaccounts.go  genesis.go  root.go
types/: alias.go
vue/: .env  README.md  package-lock.json  package.json  vue.config.js
vueempty/: README.md
wasm_code/: estimate_only_contract.wasm  transfer_contract.wasm
x/: README.md
x/_compute/internal/keeper/testdata/test-contract/: Cargo.toml  Makefile
(+1227 files in other folders)
