[workspace]
members = ["ffi-types", "execute", "query", "shared/*"]
exclude = ["test"]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[patch.crates-io]
rand_core = { git = "https://github.com/mesalock-linux/rand-sgx", default-features = false, features = [
  "mesalock_sgx"
] }


[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_align_struct_attribute = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_align_struct_attribute" }
sgx_alloc = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_alloc" }
sgx_backtrace = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_backtrace" }
sgx_backtrace_sys = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_backtrace_sys" }
sgx_build_helper = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_build_helper" }
sgx_cov = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_cov" }
sgx_crypto_helper = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_crypto_helper" }
sgx_demangle = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_demangle" }
sgx_libc = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_libc" }
sgx_no_tstd = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_no_tstd" }
sgx_rand = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="d2d339cbb005f676bb700059bd51dc689c025f6b" }
sgx_rand_derive = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_rand_derive" }
sgx_serialize = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_serialize" }
sgx_serialize_derive = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_serialize_derive" }
sgx_serialize_derive_internals = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_serialize_derive_internals" }
sgx_tcrypto = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_tcrypto" }
sgx_tcrypto_helper = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_tcrypto_helper" }
sgx_tdh = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_tdh" }
sgx_tkey_exchange = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_tkey_exchange" }
sgx_tprotected_fs = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_tprotected_fs" }
sgx_trts = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_trts" }
sgx_tse = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_tse" }
sgx_tseal = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_tseal" }
sgx_tstd = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_tstd" }
sgx_tunittest = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_tunittest" }
sgx_types = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_types" }
#sgx_ucrypto = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_ucrypto" }
sgx_unwind = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_unwind" }
#sgx_urts = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_urts" }
