[package]
name = "enclave_crypto"
version = "1.4.0"
authors = ["Cashmaney <itzik@enigma.co>"]
edition = "2018"

[features]
production = []
test = []

# This annotation is here to trick the IDE into showing us type information about this crate.
# We always compile to the "sgx" target, so this will always be false.
# when compiling to the "sgx" target, we pull this from the target root with an "extern crate" directive
[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_tstd",features = [
  "backtrace"
] }
sgx_types = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_types" }
sgx_trts = { git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e",  package="sgx_trts" }
[dependencies]
enclave-ffi-types = { path = "../../ffi-types" }
log = "0.4.8"
derive_more = "0.99"
lazy_static = "1.4.0"
hex = "0.4.2"
ring = { git = "https://github.com/mesalock-linux/ring-sgx", tag = "v0.16.5" }
sha2 = "0.8.1"
sha3 = "0.8.1"
ripemd160 = "0.9.1"
secp256k1 = { version = "0.24.0", features = ["recovery", "alloc"] }
# k256
aes-siv = "=0.6.2"
x25519-dalek = { version = "=1.2.0", default-features = false, features = [
  "u64_backend"
] }
cosmos_proto = { path = "../cosmos-proto" }