[package]
name = "enclave_utils"
version = "1.0.0"
edition = "2018"

[features]
production = []
query-only = []

# This annotation is here to trick the IDE into showing us type information about this crate.
# We always compile to the "sgx" target, so this will always be false.
# when compiling to the "sgx" target, we pull this from the target root with an "extern crate" directive
[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { package="sgx_tstd", git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="5bf3100b741851af240a50673e49f89f243e122e", features = [
  "backtrace"
] }
sgx_types = { package="sgx_types", git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="d2d339cbb005f676bb700059bd51dc689c025f6b" }
sgx_trts = { package="sgx_trts", git="https://github.com/scrtlabs/incubator-teaclave-sgx-sdk.git",  rev="d2d339cbb005f676bb700059bd51dc689c025f6b" }

[dependencies]
enclave-ffi-types = { path = "../../ffi-types" }
log = "0.4.14"
lazy_static = "1.4"
