[package]
name = "std"
version = "0.0.0"
authors = ["The Teaclave Authors"]
build = "build.rs"
edition = "2018"

[lib]
name = "std"
path = "../../../../third_party/vendor/sgx_tstd/src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["stdio"]
backtrace = ["stdio"]
stdio = []
net = []
pipe = []
thread = []
untrusted_fs = []
untrusted_time = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", ref = "d2d339cbb005f676bb700059bd51dc689c025f6b" }
sgx_libc = { git = "https://github.com/apache/teaclave-sgx-sdk.git", ref = "d2d339cbb005f676bb700059bd51dc689c025f6b" }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git", ref = "d2d339cbb005f676bb700059bd51dc689c025f6b" }
sgx_alloc = { git = "https://github.com/apache/teaclave-sgx-sdk.git", ref = "d2d339cbb005f676bb700059bd51dc689c025f6b" }
sgx_tprotected_fs = { git = "https://github.com/apache/teaclave-sgx-sdk.git", ref = "d2d339cbb005f676bb700059bd51dc689c025f6b" }
sgx_backtrace_sys = { git = "https://github.com/apache/teaclave-sgx-sdk.git", ref = "d2d339cbb005f676bb700059bd51dc689c025f6b" }
sgx_demangle = { git = "https://github.com/apache/teaclave-sgx-sdk.git", ref = "d2d339cbb005f676bb700059bd51dc689c025f6b" }
sgx_unwind = { git = "https://github.com/apache/teaclave-sgx-sdk.git", ref = "d2d339cbb005f676bb700059bd51dc689c025f6b" }

[dependencies.hashbrown]
package = "hashbrown_tstd"
path = "../../../../third_party/vendor/sgx_tstd/hashbrown"
default-features = false
features = ['rustc-dep-of-std']
