[package]
name = "test-contract"
version = "0.0.1"
edition = "2018"
description = "A Test contract intended to use in system tests"
license = "MIT"
exclude = [
  # Those files are cosmwasm-opt artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "test-contract.wasm",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
with_floats = []

[dependencies]
cosmwasm-std = { path = "../../../../../../cosmwasm/packages/std", package = "trustless-cosmwasm-std"  }
cosmwasm-storage = { path = "../../../../../../cosmwasm/packages/storage", package = "trustless-cosmwasm-storage"  }
schemars = "0.8.1"
serde = { version = "1.0.114", default-features = false, features = [
  "derive",
  "alloc"
] }
serde-json-wasm = "0.2.1"
secp256k1 = "0.20.3"
